Move WorkCreatorIT to separate class