@@ -6,7 +6,6 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 import org.folio.linked.data.e2e.mappings.PostResourceIT;
 import org.folio.linked.data.model.entity.Resource;
-import org.folio.linked.data.model.entity.ResourceEdge;
 import org.springframework.test.web.servlet.ResultActions;
 
 class TargetAudienceIT extends PostResourceIT {
@@ -39,7 +38,7 @@ class TargetAudienceIT extends PostResourceIT {
   protected void validateGraph(Resource work) {
     var expectedId = 7128309939039775870L;
     var expectedCategorySetId = 5919470580343311333L;
-    var targetAudience = getTarget(work, "http://bibfra.me/vocab/marc/targetAudience");
+    var targetAudience = getFirstTarget(work, "http://bibfra.me/vocab/marc/targetAudience");
     assertThat(targetAudience.getId()).isEqualTo(expectedId);
     assertThat(getProperty(targetAudience, "http://bibfra.me/vocab/marc/term")).isEqualTo("Primary");
     assertThat(getProperty(targetAudience, "http://bibfra.me/vocab/marc/code")).isEqualTo("b");
@@ -47,7 +46,7 @@ class TargetAudienceIT extends PostResourceIT {
       .isEqualTo("http://id.loc.gov/vocabulary/maudience/pri");
     assertThat(targetAudience.getLabel()).isEqualTo("Primary");
 
-    var categorySet = getTarget(targetAudience, "http://bibfra.me/vocab/lite/isDefinedBy");
+    var categorySet = getFirstTarget(targetAudience, "http://bibfra.me/vocab/lite/isDefinedBy");
     assertThat(categorySet.getId()).isEqualTo(expectedCategorySetId);
     assertThat(getProperty(categorySet, "http://bibfra.me/vocab/lite/label")).isEqualTo("Target audience");
     assertThat(getProperty(categorySet, "http://bibfra.me/vocab/lite/link"))
@@ -66,14 +65,7 @@ class TargetAudienceIT extends PostResourceIT {
         .value("http://id.loc.gov/vocabulary/maudience/pri"));
   }
 
-  private String getProperty(Resource resource, String property) {
-    return resource.getDoc().get(property).get(0).asText();
-  }
-
-  private Resource getTarget(Resource resource, String predicate) {
-    return resource.getOutgoingEdges().stream()
-      .filter(edge -> edge.getPredicate().getUri().equals(predicate))
-      .map(ResourceEdge::getTarget)
-      .findFirst().orElseThrow();
+  private Resource getFirstTarget(Resource instance, String url) {
+    return getTargets(instance, url).getFirst();
   }
 }
